=================== Release 1.0 2017-03-31 =====================
Description
    * First version of the App.
Changes
    * Version 1.0 Build 01 (2017/03/31)
        * Finalized support for only access to the DB via the Interface. (2017/03/14)
        * Improved support for filters. Added base support for XML backups. The marshall function is ready, only the unmarshall one is missing.
          Added support to compute MD5 hash of the DB data and the XML export. Added support for only access to the DB via the Interface. (2017/03/14)
        * Added external libraries for XML parsing. (2017/03/14)
        * Added support to migrate pending tasks too using migrate only check. (2017/03/10)
        * Mayor change to the L&F of the App. (2017/03/10)
        * Removed support to include tolerance in period of accepting tasks. (2017/03/10)
        * Added support for a function to only migrate dilated tasks for the next day. (2017/03/09)
        * Added support to show project state inside the project's view as a badge. Also corrected flicker of tables. (2017/03/09)
        * Added support for animating table changes. (2017/03/08)
        * Corrected bug where menu items where not collapsing on themselves. (2017/03/08)
        * Corrected bug where menu items overlap each other. (2017/03/08)
        * Corrected bug where when a menu item is closed it should return the view to its initial state. (2017/03/08)
        * Added support for a search menu item. (2017/03/07)
        * Added support to filter the tasks table. (2017/03/06)
        * Added some very basic support for CloudKit. (2017/03/06)
        * Added support for a filter menu item. (2017/03/06)
        * Added support to change the category of a task, but only when is EDITABLE. Also changed the layout of custom views. Sensible change! (2017/03/03)
        * Added support to notify the user that all tasks added while FIRST_DAY are going for today. (2017/03/03)